--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "i18next-browser-languagedetector": "^4.3.1",
     "ipfs-react-router": "^0.2.2",
     "moment": "^2.27.0",
+    "node-sass": "^4.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
