--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@web3-react/walletconnect-connector": "^6.1.6",
     "@web3-react/walletlink-connector": "^6.1.1",
     "async": "^3.2.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "flux": "^3.1.3",
     "i18next": "^19.6.2",
