--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "react-bootstrap": "^1.3.0",
     "react-countdown-now": "^2.1.2",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^9.0.10",
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-tradingview-widget": "^1.3.2",
     "request-promise": "^4.2.6",
     "typeface-roboto": "0.0.54",
     "web3": "^1.2.11"
