--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-select": "^4.3.1",
     "react-tradingview-widget": "^1.3.2",
     "request-promise": "^4.2.6",
     "typeface-roboto": "0.0.54",
